--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ Sphinx = "*"
 rinohtype = "*"
 sphinxcontrib-napoleon = "*"
 python-docs-theme = "*"
+sphinx-rtd-theme = "*"
 
 [packages]
 pyyaml = "*"
