--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ deploy/*
 docs/build
 docs/build/*
 
+# Certifactes
+*.crt
+*.pem
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
