--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ sphinxcontrib-napoleon = "*"
 sphinx-rtd-theme = "*"
 rinohtype = "*"
 sphinx-book-theme = "*"
+myst-parser = "*"
+sphinx-design = "*"
+sphinx-copybutton = "*"
 
 [packages]
 pyyaml = "*"
