feat: added xml, ini, .env support

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ requests = "*"
 twisted = "*"
 tomli = "*"
 tomli-w = "*"
+python-dotenv = "*"
+xmltodict = "*"
 
 [requires]
 python_version = "3"
