--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ sphinx-book-theme = "*"
 myst-parser = "*"
 sphinx-design = "*"
 sphinx-copybutton = "*"
+jsonschema = "*"
 
 [packages]
 pyyaml = "*"
